--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "export": "tsx scripts/export-db-to-json.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
     "better-sqlite3": "^11.10.0",
     "next": "15.5.4",
+    "notistack": "^3.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
