feat: implementar sistema centralizado de efeitos
- Criar tabela 'effects' com tipos (heal, damage, buff, debuff, special, boss)
- Adicionar 16 efeitos iniciais via seed
- Criar API routes para CRUD de efeitos (/api/effects)
- Criar aba de gerenciamento de efeitos no admin
- Migrar items e bosses para usar effectId (foreign key)
- Atualizar modais de items e bosses com select de efeitos
- Exibir emojis por tipo de efeito (ðŸ’šðŸ’¥â¬†ï¸â¬‡ï¸âœ¨ðŸ‘¹)
- Criar EffectsManager para gerenciar aplicaÃ§Ã£o de efeitos
- Atualizar tipos TypeScript (Item, Boss, Effect)
- Filtrar efeitos por contexto (items vs bosses)
- Mover toasts para bottom-center com 3s de duraÃ§Ã£o

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "seed:tamers": "tsx scripts/seed-tamers.ts",
     "seed:users": "tsx scripts/seed-users.ts",
     "seed:items": "tsx scripts/seed-items.ts",
+    "seed:bosses": "tsx scripts/seed-bosses.ts",
+    "seed:effects": "tsx scripts/seed-effects.ts",
     "convert-images": "tsx scripts/convert-images-to-webp.ts",
     "cleanup-images": "tsx scripts/cleanup-old-images.ts",
     "export": "tsx scripts/export-db-to-json.ts",
