feat: adiciona script de limpeza de imagens não utilizadas
- Cria script cleanup-unused-images.ts que verifica o banco de dados
- Remove imagens não referenciadas em digimons, tamers, items e bosses
- Adiciona comando 'npm run cleanup-unused' ao package.json
- Limpa 45 arquivos não utilizados (2.13 MB liberados)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "seed:effects": "tsx scripts/seed-effects.ts",
     "convert-images": "tsx scripts/convert-images-to-webp.ts",
     "cleanup-images": "tsx scripts/cleanup-old-images.ts",
+    "cleanup-unused": "tsx scripts/cleanup-unused-images.ts",
     "export": "tsx scripts/export-db-to-json.ts",
     "update-dp": "tsx scripts/update-dp-by-level.ts",
     "lowercase-names": "tsx scripts/lowercase-digimon-names.ts"
