fix: corrige erros 500 e adiciona stats aos Digimons de nÃ­vel alto
- Remove flag --turbopack incompatÃ­vel com better-sqlite3
- Configura next.config.ts para externalizar better-sqlite3
- Adiciona coluna dp e tabela attributes ao schema do banco
- Corrige tipagem de Item em json-db.ts para build funcionar
- Adiciona HP, ATK e DEF aos Digimons de nÃ­vel 6 usando progressÃ£o
- Digimons de nÃ­vel 6 agora tÃªm ~55% mais poder que nÃ­vel 5
- Exporta dados atualizados para JSONs de backup

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "tsx scripts/export-db-to-json.ts && next build --turbopack",
+    "dev": "next dev",
+    "build": "tsx scripts/export-db-to-json.ts && next build",
     "start": "next start",
     "lint": "eslint",
     "seed": "tsx scripts/seed-simple.ts",
@@ -44,6 +44,6 @@
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
